--- a/Emulicious/Emulicious.ini
+++ b/Emulicious/Emulicious.ini
@@ -1,13 +1,114 @@
 #Emulicious settings file
-#Sun Jul 09 20:33:42 MDT 2023
-CodeFontSize=13
-FontSize=13
-WindowEmuliciousHeight=564
-AudioSync=false
-WindowEmuliciousY=146
-WindowEmuliciousWidth=600
-Scale=3.5
+#Sun Jul 09 22:19:56 MDT 2023
+GameBoyErrorBreakpointCondition32=
+GameBoyErrorBreakpointMessage9=
+WindowEmuliciousY=190
+GameBoyErrorBreakpointMessage8=
+WindowEmuliciousX=907
+GameBoyErrorBreakpointEnabled32=false
+GameBoyErrorBreakpointMessage1=
+GameBoyErrorBreakpointMessage0=
+GameBoyErrorBreakpointMessage3=
+GameBoyErrorBreakpointMessage2=
+InterruptBreakpointEnabled=false
+GameBoyErrorBreakpointMessage5=
+GameBoyErrorBreakpointMessage4=
+GameBoyErrorBreakpointMessage7=
+GameBoyErrorBreakpointMessage6=
+WindowDebuggerX=0
+WindowDebuggerY=25
+UninitializedMemoryBreakpointSuspend=true
+DebuggerMemorySelectedAddress=0
+DebuggerWestPanelSelectedTab=0
+DebuggerEventFiltersGameBoy=
+GameBoyErrorBreakpointCondition10=
+GameBoyErrorBreakpointMessage20=
+GameBoyErrorBreakpointEnabled10=true
+BankSwapAtPCBreakpointSuspend=true
+GameBoyErrorBreakpointEnabled16=false
+GameBoyErrorBreakpointEnabled18=false
+GameBoyErrorBreakpointEnabled17=false
+GameBoyErrorBreakpointEnabled19=false
+GameBoyErrorBreakpointMessage10=
+GameBoyErrorBreakpointCondition20=
+DataExecutionBreakpointSuspend=true
+GameBoyErrorBreakpointMessage17=
+GameBoyErrorBreakpointMessage18=
+GameBoyErrorBreakpointMessage16=
+GameBoyErrorBreakpointEnabled20=false
+GameBoyErrorBreakpointMessage19=
+StackSplitLocation=326
+GameBoyErrorBreakpointCondition19=
+GameBoyErrorBreakpointCondition18=
+GameBoyErrorBreakpointCondition17=
+GameBoyErrorBreakpointCondition16=
+StackWidth=1256
+WindowDebuggerHeight=964
+DebuggerMemorySelectedTab=CPU
+DebuggerConsoleLogBreakpoints=true
+GameBoyErrorBreakpointEnabled0=false
+DataExecutionBreakpointEnabled=false
+GameBoyErrorBreakpointEnabled1=false
 Update=2
-Recent1=/Users/skyewaddell/Documents/github/gameboy-game/test game/game.gb
-WindowEmuliciousX=533
-Recent0=/Users/skyewaddell/Documents/github/gameboy-game/test game/a.gb
+GameBoyErrorBreakpointEnabled8=false
+GameBoyErrorBreakpointSuspend32=true
+GameBoyErrorBreakpointEnabled9=false
+GameBoyErrorBreakpointEnabled6=false
+UninitializedMemoryBreakpointEnabled=false
+GameBoyErrorBreakpointEnabled7=false
+GameBoyErrorBreakpointEnabled4=false
+GameBoyErrorBreakpointEnabled5=false
+GameBoyErrorBreakpointEnabled2=false
+GameBoyErrorBreakpointEnabled3=false
+WindowDebuggerWidth=1524
+InterruptBreakpointSuspend=true
+Recent3=/Users/skyewaddell/Documents/github/gameboy-game/test game/game.gb
+GameBoyErrorBreakpointMessage32=
+GameBoyErrorBreakpointSuspend18=true
+GameBoyErrorBreakpointSuspend19=true
+Recent2=/Users/skyewaddell/Documents/github/gameboy-game/test game/a.gb
+Recent1=/Users/skyewaddell/Documents/github/gameboy-games/test game/game.gb
+DebuggerSouthPanelSelectedTab=0
+Recent0=/Users/skyewaddell/Documents/github/gameboy-games/test game/build/game.gb
+GameBoyErrorBreakpointSuspend16=true
+GameBoyErrorBreakpointSuspend17=true
+DataExecutionBreakpointCondition=
+FontSize=13
+GameBoyErrorBreakpointSuspend20=true
+UninitializedMemoryBreakpointCondition=
+InterruptBreakpointCondition=
+WindowDebuggerOpen=false
+GameBoyErrorBreakpointCondition2=
+GameBoyErrorBreakpointCondition3=
+GameBoyErrorBreakpointCondition0=
+DebuggerHideToolbar=false
+GameBoyErrorBreakpointCondition1=
+SouthPanelHeight=652
+GameBoyErrorBreakpointCondition8=
+GameBoyErrorBreakpointCondition9=
+GameBoyErrorBreakpointCondition6=
+GameBoyErrorBreakpointCondition7=
+DebuggerMemoryTabVisibleRect=0,0,0,0
+GameBoyErrorBreakpointCondition4=
+GameBoyErrorBreakpointCondition5=
+GameBoyErrorBreakpointSuspend10=true
+BankSwapAtPCBreakpointCondition=
+AudioSync=false
+DebuggerHideCpuUsageGraph=false
+OutlineWidth=268
+GameBoyErrorBreakpointSuspend9=true
+CodeFontSize=13
+GameBoyErrorBreakpointSuspend5=true
+GameBoyErrorBreakpointSuspend6=true
+GameBoyErrorBreakpointSuspend7=true
+GameBoyErrorBreakpointSuspend8=true
+GameBoyErrorBreakpointSuspend1=true
+GameBoyErrorBreakpointSuspend2=true
+Scale=3.5
+GameBoyErrorBreakpointSuspend3=true
+GameBoyErrorBreakpointSuspend4=true
+RemoteDebuggingEnabled=true
+BankSwapAtPCBreakpointEnabled=false
+GameBoyErrorBreakpointSuspend0=true
+WindowEmuliciousHeight=532
+WindowEmuliciousWidth=560
