--- a/Emulicious/Emulicious.ini
+++ b/Emulicious/Emulicious.ini
@@ -1,21 +1,21 @@
 #Emulicious settings file
-#Mon Jul 10 00:24:38 MDT 2023
+#Mon Jul 10 09:45:34 MDT 2023
 GameBoyErrorBreakpointCondition32=
 GameBoyErrorBreakpointMessage9=
-GameBoyErrorBreakpointMessage8=
 WindowEmuliciousY=268
+GameBoyErrorBreakpointMessage8=
 WindowEmuliciousX=532
 GameBoyErrorBreakpointEnabled32=false
 GameBoyErrorBreakpointMessage1=
 GameBoyErrorBreakpointMessage0=
 GameBoyErrorBreakpointMessage3=
-InterruptBreakpointEnabled=false
 GameBoyErrorBreakpointMessage2=
+InterruptBreakpointEnabled=false
 GameBoyErrorBreakpointMessage5=
 GameBoyErrorBreakpointMessage4=
 GameBoyErrorBreakpointMessage7=
-WindowDebuggerX=0
 GameBoyErrorBreakpointMessage6=
+WindowDebuggerX=0
 WindowDebuggerY=25
 UninitializedMemoryBreakpointSuspend=true
 DebuggerMemorySelectedAddress=0
@@ -29,7 +29,7 @@ GameBoyErrorBreakpointEnabled16=false
 GameBoyErrorBreakpointEnabled18=false
 GameBoyErrorBreakpointEnabled17=false
 GameBoyErrorBreakpointEnabled19=false
-GameBoyDmgColors=919b06 5f7404 486408 3c4d00
+GameBoyDmgColors=d0e0f8 7088c0 345668 081820
 GameBoyErrorBreakpointMessage10=
 GameBoyErrorBreakpointCondition20=
 DataExecutionBreakpointSuspend=true
