--- a/GBMB/gbmb.ini
+++ b/GBMB/gbmb.ini
@@ -1,11 +1,11 @@
 [General]
-GBMPath=Z:\gameboy\gbmb\exe\
-GBRPath=C:\GB\EXSOR\GRAX\PATTERNS\
-
+GBMPath=z:\users\skyewaddell\documents\github\gameboy-games\test game\maps\
+GBRPath=Z:\Users\skyewaddell\Documents\github\gameboy-games\test game\maps\
 ViewInfoPanel=1
 ViewColorSet=0
 ViewZoom=2
 rem ViewGrid=1
 rem ViewDoubleMarkers=1
 rem ViewPropertyColors=1
-
+[Recently used files]
+F0=z:\users\skyewaddell\documents\github\gameboy-games\test game\maps\home_town.gbm
